<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <EditText
        android:id="@+id/etSaveLocation"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_location"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey" />

    <Button
        android:id="@+id/btnSaveLocation"
        style="@style/ButtonCommon"
        android:onClick="saveLocation"
        android:text="@string/save_location" />

    <EditText
        android:id="@+id/etGoTo"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/go_to_location"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey" />

    <Button
        android:id="@+id/btnGoTo"
        style="@style/ButtonCommon"
        android:onClick="goTo"
        android:text="@string/go_to" />

    <EditText
        android:id="@+id/etGetLocation"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_location"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey" />

    <Button
        android:id="@+id/btnGetLocation"
        style="@style/ButtonCommon"
        android:onClick="getLocation"
        android:text="@string/get_location" />

    <Button
        android:id="@+id/btnGetAllLocation"
        style="@style/ButtonCommon"
        android:onClick="getAllLocation"
        android:text="@string/get_all_location" />

</LinearLayout>