<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="68dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="IBX Rover" />

    </TableRow>

        <EditText
            android:id="@+id/etSaveLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_location"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey" />

        <Button
            android:id="@+id/btnSaveLocation"
            style="@style/ButtonCommon"
            android:onClick="saveLocation"
            android:text="@string/save_location" />


    <EditText
            android:id="@+id/etGoTo"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/go_to_location"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey" />

        <Button
            android:id="@+id/btnGoTo"
            style="@style/ButtonCommon"
            android:onClick="goTo"
            android:text="@string/go_to" />

    <Button
        android:id="@+id/btnGetAllLocation"
        style="@style/ButtonCommon"
        android:onClick="getAllLocation"
        android:text="@string/get_all_location" />
   <androidx.cardview.widget.CardView>
       <TextView
           android:id="@+id/et"
           android:layout_width="321dp"
           android:layout_height="wrap_content"
           android:layout_marginLeft="50dp"
           android:layout_marginTop="10dp"
           android:layout_marginRight="50dp"
           android:ems="10"
           android:gravity="center_horizontal"
           android:textColor="@color/colorBlack"
           android:textColorHint="@color/colorGrey" />
   </androidx.cardview.widget.CardView>
    <!-- Temperature Section -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="68dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="Temperation Section : " />

    </TableRow>


    <TableRow
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

        <!-- Add elements/columns in the first row-->
        <TableRow
            android:id="@+id/topHumidTemp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="Top Temperature" />

            <TextView
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="Bottom Temperature" />

            <TextView
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="Top Humidity" />

            <TextView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:text="Btm Humidity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:text="Smoke Sensor" />

            <TextView
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:text="Sound Sensor" />

        </TableRow>

        <TableRow
            android:id="@+id/tableVal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/topTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="Top Temperature" />

            <TextView
                android:id="@+id/btmTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="Bottom Temperature" />

            <TextView
                android:id="@+id/topHumid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="Humidity" />
            <TextView
                android:id="@+id/btmHumid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:text="Humidity" />

            <TextView
                android:id="@+id/smoke"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:text="Smoke Sensor" />
            <TextView
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:text="Sound Sensor" />

        </TableRow>

    <TableRow android:layout_gravity="bottom" android:layout_height="match_parent"
        />

    <TableRow
        android:id="@+id/tableZoom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/join_button"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:text="join meeting"
            android:onClick="joinMeeting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </TableRow>
    <TableRow
        android:id="@+id/tableZoomLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/login_button"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:text="log in &amp; start meeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/join_button" />

    </TableRow>


</TableLayout>